--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,14 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<div class="post">
+    
+    <header class="post-header">
+        <h1 class="post-title">{{ page.title }}</h1>
+    </header>
 
-{{ content }}
+    <article class="post-content">
+    {{ content }}
+    </article>
+
+</div>
