--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
     <header class="post-header">
         <h1 class="post-title">{{ page.title }}</h1>
     </header>
-
+    {% include reading_time.html post=content %}
     <article class="post-content">
     {{ content }}
     </article>
