--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,7 +1,13 @@
 <section class="page-header">
-  <h1 class="project-name">{{ site.title }}</h1>
+  <h1 class="project-name">
+    {% if page.title %}
+    {{ page.title }}
+    {% else %}
+    {{ site.title }}
+    {% endif %}
+  </h1>
   <h2 class="project-tagline">{{ site.tagline }}</h2>
-  <a href="#" class="btn">View on GitHub</a>
+  <!-- <a href="#" class="btn">View on GitHub</a>
   <a href="#" class="btn">Download .zip</a>
-  <a href="#" class="btn">Download .tar.gz</a>
+  <a href="#" class="btn">Download .tar.gz</a> -->
 </section>
