--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,9 @@ layout: default
 ---
 <div class="post">
     
-    <header class="post-header">
+    <!-- <header class="post-header">
         <h1 class="post-title">{{ page.title }}</h1>
-    </header>
+    </header> -->
     {% include reading_time.html post=content %}
     <article class="post-content">
     {{ content }}
