--- a/css/cayman.css
+++ b/css/cayman.css
@@ -1,4 +1,4 @@
-.highlight table td { padding: 5px; }
+/* .highlight table td { padding: 5px; }
 
 .highlight table pre { margin: 0; }
 
@@ -122,7 +122,7 @@
 
 .highlight .w { color: #bbbbbb; }
 
-.highlight { background-color: #f8f8f8; }
+.highlight { background-color: #f8f8f8; } */
 
 * { box-sizing: border-box; }
 
