--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,12 +1,8 @@
 <section class="page-header">
   <h1 class="project-name">
-    {% if page.title %}
-    {{ page.title }}
-    {% else %}
     {{ site.title }}
-    {% endif %}
   </h1>
-  <h2 class="project-tagline">{% if page.tagline %}{{ page.tagline }}{% else %}{{ site.tagline }}{% endif %}</h2>
+  <h2 class="project-tagline">{{ site.tagline }}</h2>
   <!-- <a href="#" class="btn">View on GitHub</a>
   <a href="#" class="btn">Download .zip</a>
   <a href="#" class="btn">Download .tar.gz</a> -->
