--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,3 +1,9 @@
+<nav class="main-nav">
+  <ul>
+    <li><a href="/">Home</a></li>
+    <li><a href="/about">About</a></li>
+  </ul>
+</nav>
 <section class="page-header">
   <h1 class="project-name">
     {{ site.title }}
