--- a/css/custom.scss
+++ b/css/custom.scss
@@ -14,12 +14,14 @@ $text-secondary: #8a979c;
 
 .page-header { 
     background-color: #000000; 
-    background-image: none; 
+    background-image: url('../assets/header-bg.png'); 
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 nav.main-nav ul {
 	margin: 0;
-	padding: 0;
+	padding: 0 20px 0 0;
 	list-style: none;
 	float: right;
 }
@@ -30,7 +32,9 @@ nav.main-nav a {
 }
 
 nav.main-nav li a {
-	padding: 10px;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
 }
 
 .main-content {
