--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,8 @@ layout: default
     <article class="post-content">
     {{ content }}
     </article>
-
+    <footer>
+        <p>{{page.author}} {{page.date | date: '%B %d, %Y'}}</p>
+    </footer>
     {% include disqus.html %}
 </div>
