--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ site.baseurl }}/css/cayman.css">
-  <!-- <link rel="stylesheet" href="{{ site.baseurl }}/css/zenburn.css"> -->
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css"> 
   <link rel="stylesheet" href="{{ site.baseurl }}/css/custom.css">
 
   {% if jekyll.environment == 'production' %}
