--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
     {{ content }}
     </article>
     <footer>
-        <p>{{page.author}} {{page.date | date: '%B %d, %Y'}}</p>
+        <p>{{page.author}} | {{page.date | date: '%B %d, %Y'}}</p>
     </footer>
     {% include disqus.html %}
 </div>
